[project]
name = "healthcare-assistant-ags-capstone"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pypdf>=6.6.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.41.0",
    "xmltodict>=1.0.2",
]
